# doihaveinter.net

./: .gitignore  Dockerfile  Makefile  README.md  doihaveinter.net.py  pyproject.toml
src/: func.py  get_ip.py  pyproject.toml
src/cdk/: cdk_stack.py  pipeline.py
src/cdk.out/: CdkStack.template.json  manifest.json  tree.json
src/docker/: Dockerfile
src/webserver/: doihaveinter.net.py  pyproject.toml
terraform/: main.tf  outputs.tf  variables.tf
test/: test_get_ip.py
