[tool.poetry]
name = "doihaveinter.net-webserver"
version = "0.1.0"
description = ""
authors = ["mudbungie <mudbungie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
